--- a/Index.html
+++ b/Index.html
@@ -9,11 +9,153 @@
 <body>
     <div class="card-area">
         <div class="card">
-            <div class="picture-section>">
+            <a href="https://www.zillow.com/homedetails/210-W-Bluff-Ave-Fresno-CA-93711/18689316_zpid/" target="_blank">
+            <div class="picture-section">
+                <div class="update">
+                    1 days on Zillow
+                </div>
                 <img class="picture" src="https://photos.zillowstatic.com/fp/5a8493da740eebaef7c6f3a27b08fbaa-cc_ft_768.webp" alt="house">
+                <div class="company">
+                    Realty Concepts, Ltd.
+                </div>
             </div>
             <div class="info">
+                <div class="listing">
+                    <div class="price">
+                        $1,900,000
+                    </div>
+                    <div class="size">
+                        <strong>5</strong> bd | <strong>5</strong> ba | <strong>6,859</strong> sqft
+                    </div>
+                </div>
+                <div class="address">
+                    210 W Bluff Ave, Fresno, CA 93711
+                </div>
+                <div class="type">
+                    &#127969; House for Sale
+                </div>
             </div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="https://www.zillow.com/homedetails/353-N-College-Ave-Fresno-CA-93701/82857933_zpid/" target="_blank">
+                <div class="picture-section">
+                    <div class="update">
+                        12 days on Zillow
+                    </div>
+                    <img class="picture" src="https://photos.zillowstatic.com/fp/d1299eedc16716a1d00b478077e8ecc6-cc_ft_768.webp" alt="house">
+                    <div class="company">
+                        Realty Concepts, Ltd.
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="listing">
+                        <div class="price">
+                            $295,000
+                        </div>
+                        <div class="size">
+                            <strong>4</strong> bd | <strong>4</strong> ba | <strong>2,926</strong> sqft
+                        </div>
+                    </div>
+                    <div class="address">
+                        353 N College Ave, Fresno, CA 93701
+                    </div>
+                    <div class="type">
+                        &#127969; House for Sale
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="https://www.zillow.com/homedetails/4409-N-Prospect-Ave-Fresno-CA-93722/18716905_zpid/" target="_blank">
+                <div class="picture-section">
+                    <div class="update">
+                        21 days on Zillow
+                    </div>
+                    <img class="picture" src="https://photos.zillowstatic.com/fp/67104946062ae54b1913bff577a73f28-cc_ft_768.webp" alt="house">
+                    <div class="company">
+                        Realty Concepts, Ltd.
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="listing">
+                        <div class="price">
+                            $390,000
+                        </div>
+                        <div class="size">
+                            <strong>4</strong> bd | <strong>2</strong> ba | <strong>1,643</strong> sqft
+                        </div>
+                    </div>
+                    <div class="address">
+                        4409 N Prospect Ave, Fresno, CA 93722
+                    </div>
+                    <div class="type">
+                        &#127969; House for Sale
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="https://www.zillow.com/homedetails/5693-N-Cleo-Ave-Fresno-CA-93722/18791315_zpid/" target="_blank">
+                <div class="picture-section">
+                    <div class="update">
+                        6 days on Zillow
+                    </div>
+                    <img class="picture" src="https://photos.zillowstatic.com/fp/086fc09546bebcfba235a79ba92108ec-cc_ft_768.webp" alt="house">
+                    <div class="company">
+                        Realty Concepts, Ltd.
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="listing">
+                        <div class="price">
+                            $389,000
+                        </div>
+                        <div class="size">
+                            <strong>3</strong> bd | <strong>2</strong> ba | <strong>1,425</strong> sqft
+                        </div>
+                    </div>
+                    <div class="address">
+                        5693 N Cleo Ave, Fresno, CA 93722
+                    </div>
+                    <div class="type">
+                        &#127969; House for Sale
+                    </div>
+                </div>
+            </a>
+        </div>
+
+        <div class="card">
+            <a href="https://www.zillow.com/homedetails/2478-W-Ellery-Ave-Fresno-CA-93711/18696393_zpid/" target="_blank">
+                <div class="picture-section">
+                    <div class="update">
+                        2 days on Zillow
+                    </div>
+                    <img class="picture" src="https://photos.zillowstatic.com/fp/2a9fc497348bd4c57ccf99a9f78b3ed0-cc_ft_768.webp" alt="house">
+                    <div class="company">
+                        Realty Concepts, Ltd.
+                    </div>
+                </div>
+                <div class="info">
+                    <div class="listing">
+                        <div class="price">
+                            $850,000
+                        </div>
+                        <div class="size">
+                            <strong>4</strong> bd | <strong>4</strong> ba | <strong>3,421</strong> sqft
+                        </div>
+                    </div>
+                    <div class="address">
+                        2478 W Ellery Ave, Fresno, CA 93711
+                    </div>
+                    <div class="type">
+                        &#127969; House for Sale
+                    </div>
+                </div>
+            </a>
         </div>
     </div>
 </body>
