--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,9 @@
                 <div class="update">
                     1 days on Zillow
                 </div>
+                <div class="sticker">
+                    &#128151;
+                </div>
                 <img class="picture" src="https://photos.zillowstatic.com/fp/5a8493da740eebaef7c6f3a27b08fbaa-cc_ft_768.webp" alt="house">
                 <div class="company">
                     Realty Concepts, Ltd.
@@ -34,6 +37,7 @@
                 <div class="type">
                     &#127969; House for Sale
                 </div>
+
             </div>
             </a>
         </div>
@@ -43,6 +47,9 @@
                 <div class="picture-section">
                     <div class="update">
                         12 days on Zillow
+                    </div>
+                    <div class="sticker">
+                        &#11088;
                     </div>
                     <img class="picture" src="https://photos.zillowstatic.com/fp/d1299eedc16716a1d00b478077e8ecc6-cc_ft_768.webp" alt="house">
                     <div class="company">
@@ -133,6 +140,9 @@
                 <div class="picture-section">
                     <div class="update">
                         2 days on Zillow
+                    </div>
+                    <div class="sticker">
+                        &#11088;
                     </div>
                     <img class="picture" src="https://photos.zillowstatic.com/fp/2a9fc497348bd4c57ccf99a9f78b3ed0-cc_ft_768.webp" alt="house">
                     <div class="company">
